--- a/assets/sass/_custom-variables.scss
+++ b/assets/sass/_custom-variables.scss
@@ -8,3 +8,6 @@ $font-family-secondary:       'Montserrat', sans-serif;
 // Color system
 $white:                       #fff;
 $brand-yellow:                #ffb33f;
+$brand-maroon:                #d34848;
+$brand-black:                 #191919;
+$brand-blue:                  #1fe1e9;
