--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10845,11 +10845,13 @@ html {
 }
 #nav .hovering-ball {
   position: absolute;
-  top: -142px;
-  left: -84px;
   background: black;
   border-radius: 50%;
   z-index: -1;
+  top: 87px;
+  left: 40px;
+  width: 30px;
+  height: 30px;
 }
 
 section {
