--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -148,12 +148,13 @@
   }
   .hovering-ball {
     position: absolute;
-    top: -142px;
-    left: -84px;
-
     background: black;
     border-radius: 50%;
     z-index: -1;
+    top: 87px;
+    left: 40px;
+    width: 30px;
+    height: 30px;
   }
 }
 
