minor navigation styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10757,9 +10757,14 @@ html {
 }
 #nav .navbar-toggler {
   margin-right: 25px;
+  margin-left: 57px;
 }
 #nav .navbar-toggler:focus {
   box-shadow: none;
+}
+#nav .navbar-collapse {
+  margin-left: 70px;
+  padding-top: 4px;
 }
 #nav .navbar-toggler-icon {
   display: flex;
@@ -10779,6 +10784,8 @@ html {
   color: #fff;
   font-size: 48px;
   font-weight: bold;
+  padding-bottom: 0;
+  line-height: 1.3;
 }
 #nav .nav-item .nav-link.active {
   color: #ffb33f;
@@ -10819,6 +10826,9 @@ html {
 #nav.colored-section-3 .nav-item .nav-link.active {
   color: #191919;
 }
+#nav.colored-section-3 .hovering-ball {
+  background: #1fe1e9;
+}
 #nav.colored-section-4 .navbar-toggler[aria-expanded=true] .navbar-toggler-icon span {
   background: #1fe1e9;
 }
@@ -10830,6 +10840,9 @@ html {
 }
 #nav.colored-section-4 .nav-item .nav-link.active {
   color: #1fe1e9;
+}
+#nav.colored-section-4 .hovering-ball {
+  background: #191919;
 }
 #nav.colored-section-5 .navbar-toggler[aria-expanded=true] .navbar-toggler-icon span {
   background: #191919;
@@ -10843,15 +10856,18 @@ html {
 #nav.colored-section-5 .nav-item .nav-link.active {
   color: #191919;
 }
+#nav.colored-section-5 .hovering-ball {
+  background: #1fe1e9;
+}
 #nav .hovering-ball {
   position: absolute;
   background: black;
   border-radius: 50%;
   z-index: -1;
   top: 87px;
-  left: 40px;
-  width: 30px;
-  height: 30px;
+  left: 96px;
+  width: 1px;
+  height: 1px;
 }
 
 section {
