--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -13,11 +13,16 @@
   }
  .navbar-toggler {
     margin-right: 25px;
+    margin-left: 57px;
     &:focus {
       box-shadow: none;
     }
   }
- .navbar-toggler-icon {
+  .navbar-collapse {
+    margin-left: 70px;
+    padding-top: 4px;
+  }
+  .navbar-toggler-icon {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -36,6 +41,8 @@
       color: $white;
       font-size: 48px;
       font-weight: bold;
+      padding-bottom: 0;
+      line-height: 1.3;
       &.active {
         color: $brand-yellow;
       }
@@ -103,6 +110,9 @@
         }
       }
     }
+    .hovering-ball {
+      background: $brand-blue;
+    }
   }
   &.colored-section-4 {
     .navbar-toggler {
@@ -123,6 +133,9 @@
           color: $brand-blue;
         }
       }
+    }
+    .hovering-ball {
+      background: $brand-black;
     }
   }
   &.colored-section-5 {
@@ -145,6 +158,9 @@
         }
       }
     }
+    .hovering-ball {
+      background: $brand-blue;
+    }
   }
   .hovering-ball {
     position: absolute;
@@ -152,9 +168,9 @@
     border-radius: 50%;
     z-index: -1;
     top: 87px;
-    left: 40px;
-    width: 30px;
-    height: 30px;
+    left: 96px;
+    width: 1px;
+    height: 1px;
   }
 }
 
