--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10878,11 +10878,10 @@ section {
   align-items: center;
   justify-content: center;
   font-size: 24px;
-  text-transform: uppercase;
   font-weight: 700;
 }
 
-#sec1 {
+#sound {
   background-color: #d34848;
 }
 
@@ -11021,6 +11020,46 @@ section {
 }
 .btn-mix-noRadius::after, .btn-mix-noRadius::before {
   border-radius: 0 !important;
+}
+
+#sound > .container > .row {
+  align-items: center;
+}
+#sound img {
+  max-width: 254px;
+  float: left;
+}
+#sound img:last-child {
+  margin-top: 217px;
+}
+#sound h2, #sound .h2 {
+  padding-top: 10px;
+  font-size: 74px;
+  line-height: 90px;
+  color: #fff;
+  font-weight: bold;
+}
+#sound p {
+  font-size: 51px;
+  color: #191919;
+  font-weight: normal;
+  line-height: 61px;
+}
+
+.circle {
+  position: absolute;
+  width: 145px;
+  height: 145px;
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
+  border: 2px solid #fff;
+  color: #fff;
+  border-radius: 50%;
+  backface-visibility: hidden;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
