--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -185,11 +185,10 @@ section {
   align-items: center;
   justify-content: center;
   font-size: 24px;
-  text-transform: uppercase;
   font-weight: 700;
 }
 
-#sec1 {
+#sound {
   background-color: $brand-maroon;
 }
 #sec2  {
