--- a/assets/sass/_custom-variables.scss
+++ b/assets/sass/_custom-variables.scss
@@ -1,7 +1,7 @@
 // Custom Variables
 // ----------------
 // Fonts
-$font-family-base:            'Roboto', sans-serif;
+$font-family-base:            'Nunito Sans', sans-serif;
 $font-family-secondary:       'Montserrat', sans-serif;
 
 
