--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,7 @@
 @import "custom-variables";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;800&display=swap');
 
 // Import files
 // -----------------
